vertical ipad hero clipping fix

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1638,7 +1638,7 @@ body {
   background-position: center top;
   padding: rem-calc(250) 0;
   @media #{$medium-up} {
-    padding: rem-calc(180) 0;
+    padding: rem-calc(195) 0;
   }
   @media #{$large-up} {
     padding: rem-calc(200) 0;
